desktop design complete

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
         <a href="#">Sign In</a>
       </nav>
     </section>
+
     <div class="container home">
       <header class="intro">
         <!-- image code here -->
+        <img src="img/main-header.png" class="earth" alt="earth surface" />
 
         <h2>Lift Off</h2>
 
